--- a/.github/workflows/build-media3-ffmpeg-decoder.yml
+++ b/.github/workflows/build-media3-ffmpeg-decoder.yml
@@ -45,14 +45,18 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
  
-    steps:
+    step:
+      - name: Initialization values
+        run: |
+          echo "BV_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+
       - name: Checkout repository
         uses: actions/checkout@main
  
-      - name: Setup JDK 17
+      - name: Setup JDK 21
         uses: actions/setup-java@main
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
  
       - name: Setup Android NDK
@@ -114,3 +118,15 @@ jobs:
           path: |
             media/libraries/decoder_ffmpeg/buildout/outputs/aar/*
           compression-level: 9
+          
+      - name: Create GitHub release
+        uses: softprops/action-gh-release@master
+        with:
+          tag_name: ${{env.BV_DATE}}-ffmpeglib
+          # 要附加到此次发布的文件列表
+          files: |
+            media/libraries/decoder_ffmpeg/buildout/outputs/aar/*
+          # 设置为 true 则每次运行覆盖同名草稿，适用于持续集成测试版
+          draft: false
+          # 是否为预发布版本
+          prerelease: false
