--- a/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@main
         with:
-          distribution: "zulu"
-          java-version: "17"
+          java-version: "21"
+          distribution: "temurin"
           cache: "gradle"
           cache-dependency-path: |
             android/*.gradle*
