--- a/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
@@ -65,16 +65,16 @@ jobs:
       - name: Flutter build apk
         # run: flutter build apk --release --split-per-abi --dart-define-from-file=pili_release.json --pub
         # 改为仅编译arm64-v8a架构版本
-        run: flutter build apk --release --target-platform=android-arm64 --dart-define-from-file=pili_release.json --pub
+        run: flutter build apk --release --target-platform=android-arm64 --split-per-abi --dart-define-from-file=pili_release.json --pub
         
       - name: Rename apk
         run: |
-          # for file in build/app/outputs/flutter-apk/app-*-release.apk; do
-            # abi=$(echo "$file" | sed -E 's|.*app-(.*)-release\.apk|\1|')
-            # mv "$file" "PiliPlus_android_${{ env.version }}_${abi}.apk"
-          # done
+          for file in build/app/outputs/flutter-apk/app-*-release.apk; do
+            abi=$(echo "$file" | sed -E 's|.*app-(.*)-release\.apk|\1|')
+            mv "$file" "PiliPlus_android_${{ env.version }}_${abi}.apk"
+          done
           # 配合仅编译arm64-v8a架构版本导致的文件名变化进行的修改
-          mv "app-release.apk" "PiliPlus_android_${{ env.version }}_${abi}.apk"
+          # mv "app-release.apk" "PiliPlus_android_${{ env.version }}_${abi}.apk"
         shell: bash
         
       - name: Create GitHub Release & Upload APK
