--- a/.github/workflows/build-termux.yml
+++ b/.github/workflows/build-termux.yml
@@ -32,14 +32,14 @@ jobs:
           ref: master
           path: ${{ env.SOURCE_DIR }}
       
-      - name: Set up JDK 17
-        uses: actions/setup-java@main
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+      # - name: Set up JDK 17
+      #   uses: actions/setup-java@main
+      #   with:
+      #     distribution: 'temurin'
+      #     java-version: '17'
       
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@main
+      # - name: Set up Android SDK
+      #   uses: android-actions/setup-android@main
       
       - name: Decode Keystore
         env:
