--- a/.github/workflows/build-termux.yml
+++ b/.github/workflows/build-termux.yml
@@ -13,15 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-      # 使用 apt-android-7 变体（根据需求可选择其他变体）
       PACKAGE_VARIANT: apt-android-7
-      # 只构建 arm64-v8a 架构
       BUILD_ABI: arm64-v8a
-      # 构建类型设为 release
       BUILD_TYPE: release
-      # 源代码目录
       SOURCE_DIR: termux-app-source
-      # gh token
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     steps:
@@ -32,14 +27,34 @@ jobs:
           ref: master
           path: ${{ env.SOURCE_DIR }}
       
-      # - name: Set up JDK 17
-      #   uses: actions/setup-java@main
-      #   with:
-      #     distribution: 'temurin'
-      #     java-version: '17'
+      # ✅ 添加以下步骤（确保未注释）
+      - name: Set up JDK 11
+        uses: actions/setup-java@main
+        with:
+          distribution: 'temurin'
+          java-version: '11'
       
-      # - name: Set up Android SDK
-      #   uses: android-actions/setup-android@main
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@main
+      
+      - name: Install Android SDK components
+        run: |
+          # 确保 sdkmanager 可用
+          export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
+          
+          # 接受许可证
+          yes | sdkmanager --licenses
+          
+          # 安装必要的组件
+          sdkmanager \
+            "platform-tools" \
+            "platforms;android-30" \
+            "build-tools;30.0.3" \
+            "ndk;22.1.7171670" \
+            "cmake;3.18.1"
+          
+          # 验证安装
+          sdkmanager --list
       
       - name: Decode Keystore
         env:
@@ -50,11 +65,9 @@ jobs:
             exit 1
           fi
           
-          # 创建目录并解码密钥库
           mkdir -p ./keystore
           echo "$KEYSTORE_BASE64" | base64 --decode > ./keystore/release-keystore.p12
           
-          # 验证文件是否创建成功
           if [ ! -f "./keystore/release-keystore.p12" ]; then
             echo "错误: 密钥库文件创建失败"
             exit 1
